Move to java 20